# human_kinematic_model

./: .gitignore  CMakeLists.txt  package.xml
cmake_config/: human_modelConfig.cmake
include/human_model/: human_model.hpp
src/human_model/: human_model.cpp
test/: head.py  right_arm_test.py  test_fk_ik.cpp  trunk.py
